Update index.html links

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <h2>Project Files</h2>
     <p>Click the links below to explore the different parts of the analysis:</p>
     <ul>
-        <li><a href="notebook/stock_analysis.ipynb" target="_blank">Jupyter Notebook: Stock Analysis</a></li>
-        <li><a href="data/stock_data.csv" target="_blank">Dataset: Stock Price Data (CSV)</a></li>
+        <li><a href="https://colab.research.google.com/drive/1X1LlUGdiHiQK3k77yA2mDT1YeVNq7ZCx?authuser=1#scrollTo=cEcLFYxUdybf" target="_blank">Jupyter Notebook: Stock Analysis</a></li>
+        <li><a href="https://raw.githubusercontent.com/prasanna2019/StockDataAnalysis/refs/heads/main/HZNC%20Historical%20Data.csv" target="_blank">Dataset: Stock Price Data (CSV)</a></li>
     </ul>
 
     <h2>Project Highlights</h2>
